--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "crm for managing all life subscriptions",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon ./index.js --exec babel-node -e js"
   },
   "repository": {
     "type": "git",
